# MiroThinker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
apps/gradio-demo/: .env.example  README.md
apps/miroflow-agent/: .dockerignore  .env.example  API_DOCUMENTATION.md  Dockerfile  MIROTHINKER_1.7.md  api_server.py  gradio_webui.py  main.py  pyproject.toml
apps/miroflow-agent/api/: __init__.py  dependencies.py  stream_manager.py
apps/miroflow-agent/api/middleware/: auth.py
apps/miroflow-agent/api/models/: __init__.py  auth.py  task.py
apps/miroflow-agent/api/routes/: __init__.py  admin.py  auth.py  configs.py  health.py  smart_search.py  tasks.py  uploads.py
apps/miroflow-agent/conf/: config.yaml
apps/miroflow-agent/conf/agent/: default.yaml  demo.yaml  mirothinker_1.7_crawl4ai.yaml  mirothinker_1.7_keep5_max200.yaml  mirothinker_1.7_keep5_max300.yaml  mirothinker_1.7_microsandbox.yaml  mirothinker_v1.0.yaml  mirothinker_v1.0_keep5.yaml  mirothinker_v1.5.yaml  mirothinker_v1.5_keep5_max200.yaml  multi_agent.yaml  (+4 more)
apps/miroflow-agent/core/: task_executor.py  task_manager.py
apps/mirothinker-web/: .dockerignore  .env.local  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
assets/: LOCAL-TOOL-DEPLOYMENT.md
libs/miroflow-tools/: README.md  pyproject.toml
libs/miroflow-tools/src/miroflow_tools/: manager.py
libs/miroflow-tools/src/miroflow_tools/mcp_servers/: audio_mcp_server_os.py  crawl4ai_mcp_server.py  microsandbox_docker_mcp_server.py  python_mcp_server.py  reasoning_mcp_server_os.py  searxng_mcp_server.py  vision_mcp_server_os.py
(+43 files in other folders)
